Fixes collapsing search button on mobile search
Noticed on large smartphones the search button was showing behind
search box when the mobile search was expanded.
Corrected by increasing the width of the search form on on large
smartphones and above.

mario h.
node/63171

--- a/sites/all/themes/slac/css/main.css
+++ b/sites/all/themes/slac/css/main.css
@@ -6319,6 +6319,7 @@ h1.title {
   #slac-search-block-form {
     margin-left: 7.5rem;
     margin-top: 0;
+    width: 320px;
   }
 }
 @media (min-width: 60em) {
